exports[`no-identical-assertion-arguments > invalid(1): import assert from 'node:assert';\nlet a;\nassert.strictEqual(a.b, a.b); 1`] = `

  1 | import assert from 'node:assert';
  2 | let a;
  3 | assert.strictEqual(a.b, a.b);

`;

exports[`no-identical-assertion-arguments > invalid(1): import assert from 'node:assert';\nlet a;\nassert.strictEqual(a.b, a.b); 2`] = `

Message:
  1 | import assert from 'node:assert';
  2 | let a;
> 3 | assert.strictEqual(a.b, a.b);
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Both arguments are the same, so this assertion always passes.

`;

exports[`no-identical-assertion-arguments > invalid(10): import assert from 'node:assert';\nassert.deepStrictEqual(value, value); 1`] = `

  1 | import assert from 'node:assert';
  2 | assert.deepStrictEqual(value, value);

`;

exports[`no-identical-assertion-arguments > invalid(10): import assert from 'node:assert';\nassert.deepStrictEqual(value, value); 2`] = `

Message:
  1 | import assert from 'node:assert';
> 2 | assert.deepStrictEqual(value, value);
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Both arguments are the same, so this assertion always passes.

`;

exports[`no-identical-assertion-arguments > invalid(11): import assert from 'node:assert';\nassert.strictEqual(obj.a, obj.a); 1`] = `

  1 | import assert from 'node:assert';
  2 | assert.strictEqual(obj.a, obj.a);

`;

exports[`no-identical-assertion-arguments > invalid(11): import assert from 'node:assert';\nassert.strictEqual(obj.a, obj.a); 2`] = `

Message:
  1 | import assert from 'node:assert';
> 2 | assert.strictEqual(obj.a, obj.a);
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Both arguments are the same, so this assertion always passes.

`;

exports[`no-identical-assertion-arguments > invalid(12): import assert from 'node:assert';\nassert.notStrictEqual(x, x); 1`] = `

  1 | import assert from 'node:assert';
  2 | assert.notStrictEqual(x, x);

`;

exports[`no-identical-assertion-arguments > invalid(12): import assert from 'node:assert';\nassert.notStrictEqual(x, x); 2`] = `

Message:
  1 | import assert from 'node:assert';
> 2 | assert.notStrictEqual(x, x);
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^ Both arguments are the same, so this assertion always fails.

`;

exports[`no-identical-assertion-arguments > invalid(13): import assert from 'node:assert';\nassert.notDeepEqual(obj.a, obj.a); 1`] = `

  1 | import assert from 'node:assert';
  2 | assert.notDeepEqual(obj.a, obj.a);

`;

exports[`no-identical-assertion-arguments > invalid(13): import assert from 'node:assert';\nassert.notDeepEqual(obj.a, obj.a); 2`] = `

Message:
  1 | import assert from 'node:assert';
> 2 | assert.notDeepEqual(obj.a, obj.a);
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Both arguments are the same, so this assertion always fails.

`;

exports[`no-identical-assertion-arguments > invalid(14): import assert from 'node:assert';\nassert.strictEqual(x, x, \"should match\"); 1`] = `

  1 | import assert from 'node:assert';
  2 | assert.strictEqual(x, x, "should match");

`;

exports[`no-identical-assertion-arguments > invalid(14): import assert from 'node:assert';\nassert.strictEqual(x, x, \"should match\"); 2`] = `

Message:
  1 | import assert from 'node:assert';
> 2 | assert.strictEqual(x, x, "should match");
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Both arguments are the same, so this assertion always passes.

`;

exports[`no-identical-assertion-arguments > invalid(15): import {strictEqual} from 'node:assert';\nstrictEqual(x, x); 1`] = `

  1 | import {strictEqual} from 'node:assert';
  2 | strictEqual(x, x);

`;

exports[`no-identical-assertion-arguments > invalid(15): import {strictEqual} from 'node:assert';\nstrictEqual(x, x); 2`] = `

Message:
  1 | import {strictEqual} from 'node:assert';
> 2 | strictEqual(x, x);
    | ^^^^^^^^^^^^^^^^^ Both arguments are the same, so this assertion always passes.

`;

exports[`no-identical-assertion-arguments > invalid(16): import test from 'node:test';\ntest(\"x\", t => { t.assert.strictEqual(value, value); }); 1`] = `

  1 | import test from 'node:test';
  2 | test("x", t => { t.assert.strictEqual(value, value); });

`;

exports[`no-identical-assertion-arguments > invalid(16): import test from 'node:test';\ntest(\"x\", t => { t.assert.strictEqual(value, value); }); 2`] = `

Message:
  1 | import test from 'node:test';
> 2 | test("x", t => { t.assert.strictEqual(value, value); });
    |                  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Both arguments are the same, so this assertion always passes.

`;

exports[`no-identical-assertion-arguments > invalid(17): import assert from 'node:assert';\nassert.strictEqual((x), x); 1`] = `

  1 | import assert from 'node:assert';
  2 | assert.strictEqual((x), x);

`;

exports[`no-identical-assertion-arguments > invalid(17): import assert from 'node:assert';\nassert.strictEqual((x), x); 2`] = `

Message:
  1 | import assert from 'node:assert';
> 2 | assert.strictEqual((x), x);
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^ Both arguments are the same, so this assertion always passes.

`;

exports[`no-identical-assertion-arguments > invalid(18): import * as assert from 'node:assert';\nassert.strictEqual(x, x); 1`] = `

  1 | import * as assert from 'node:assert';
  2 | assert.strictEqual(x, x);

`;

exports[`no-identical-assertion-arguments > invalid(18): import * as assert from 'node:assert';\nassert.strictEqual(x, x); 2`] = `

Message:
  1 | import * as assert from 'node:assert';
> 2 | assert.strictEqual(x, x);
    | ^^^^^^^^^^^^^^^^^^^^^^^^ Both arguments are the same, so this assertion always passes.

`;

exports[`no-identical-assertion-arguments > invalid(19): import assert from 'node:assert';\nassert.strictEqual(x as Foo, x); 1`] = `

  1 | import assert from 'node:assert';
  2 | assert.strictEqual(x as Foo, x);

`;

exports[`no-identical-assertion-arguments > invalid(19): import assert from 'node:assert';\nassert.strictEqual(x as Foo, x); 2`] = `

Message:
  1 | import assert from 'node:assert';
> 2 | assert.strictEqual(x as Foo, x);
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Both arguments are the same, so this assertion always passes.

`;

exports[`no-identical-assertion-arguments > invalid(2): import assert from 'node:assert';\nvar a;\nassert.deepStrictEqual(a.b, a.b); 1`] = `

  1 | import assert from 'node:assert';
  2 | var a;
  3 | assert.deepStrictEqual(a.b, a.b);

`;

exports[`no-identical-assertion-arguments > invalid(2): import assert from 'node:assert';\nvar a;\nassert.deepStrictEqual(a.b, a.b); 2`] = `

Message:
  1 | import assert from 'node:assert';
  2 | var a;
> 3 | assert.deepStrictEqual(a.b, a.b);
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Both arguments are the same, so this assertion always passes.

`;

exports[`no-identical-assertion-arguments > invalid(20): import assert from 'node:assert';\nassert.strictEqual(x!, x!); 1`] = `

  1 | import assert from 'node:assert';
  2 | assert.strictEqual(x!, x!);

`;

exports[`no-identical-assertion-arguments > invalid(20): import assert from 'node:assert';\nassert.strictEqual(x!, x!); 2`] = `

Message:
  1 | import assert from 'node:assert';
> 2 | assert.strictEqual(x!, x!);
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^ Both arguments are the same, so this assertion always passes.

`;

exports[`no-identical-assertion-arguments > invalid(21): import assert from 'node:assert';\nassert.strict.deepStrictEqual(x, x); 1`] = `

  1 | import assert from 'node:assert';
  2 | assert.strict.deepStrictEqual(x, x);

`;

exports[`no-identical-assertion-arguments > invalid(21): import assert from 'node:assert';\nassert.strict.deepStrictEqual(x, x); 2`] = `

Message:
  1 | import assert from 'node:assert';
> 2 | assert.strict.deepStrictEqual(x, x);
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Both arguments are the same, so this assertion always passes.

`;

exports[`no-identical-assertion-arguments > invalid(22): import {getTestContext} from 'node:test';\ngetTestContext().assert.strictEqual(x, x); 1`] = `

  1 | import {getTestContext} from 'node:test';
  2 | getTestContext().assert.strictEqual(x, x);

`;

exports[`no-identical-assertion-arguments > invalid(22): import {getTestContext} from 'node:test';\ngetTestContext().assert.strictEqual(x, x); 2`] = `

Message:
  1 | import {getTestContext} from 'node:test';
> 2 | getTestContext().assert.strictEqual(x, x);
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Both arguments are the same, so this assertion always passes.

`;

exports[`no-identical-assertion-arguments > invalid(23): import {notStrictEqual} from 'node:assert';\nnotStrictEqual(x, x); 1`] = `

  1 | import {notStrictEqual} from 'node:assert';
  2 | notStrictEqual(x, x);

`;

exports[`no-identical-assertion-arguments > invalid(23): import {notStrictEqual} from 'node:assert';\nnotStrictEqual(x, x); 2`] = `

Message:
  1 | import {notStrictEqual} from 'node:assert';
> 2 | notStrictEqual(x, x);
    | ^^^^^^^^^^^^^^^^^^^^ Both arguments are the same, so this assertion always fails.

`;

exports[`no-identical-assertion-arguments > invalid(24): import assert from 'node:assert';\nassert.strictEqual(1, 1); 1`] = `

  1 | import assert from 'node:assert';
  2 | assert.strictEqual(1, 1);

`;

exports[`no-identical-assertion-arguments > invalid(24): import assert from 'node:assert';\nassert.strictEqual(1, 1); 2`] = `

Message:
  1 | import assert from 'node:assert';
> 2 | assert.strictEqual(1, 1);
    | ^^^^^^^^^^^^^^^^^^^^^^^^ Both arguments are the same, so this assertion always passes.

`;

exports[`no-identical-assertion-arguments > invalid(25): import assert from 'node:assert';\nassert.deepEqual(x, x); 1`] = `

  1 | import assert from 'node:assert';
  2 | assert.deepEqual(x, x);

`;

exports[`no-identical-assertion-arguments > invalid(25): import assert from 'node:assert';\nassert.deepEqual(x, x); 2`] = `

Message:
  1 | import assert from 'node:assert';
> 2 | assert.deepEqual(x, x);
    | ^^^^^^^^^^^^^^^^^^^^^^ Both arguments are the same, so this assertion always passes.

`;

exports[`no-identical-assertion-arguments > invalid(26): import assert from 'node:assert';\nassert.deepStrictEqual(/a/, /a/); 1`] = `

  1 | import assert from 'node:assert';
  2 | assert.deepStrictEqual(/a/, /a/);

`;

exports[`no-identical-assertion-arguments > invalid(26): import assert from 'node:assert';\nassert.deepStrictEqual(/a/, /a/); 2`] = `

Message:
  1 | import assert from 'node:assert';
> 2 | assert.deepStrictEqual(/a/, /a/);
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Both arguments are the same, so this assertion always passes.

`;

exports[`no-identical-assertion-arguments > invalid(27): import assert from 'node:assert';\nassert.deepEqual(/a/, /a/); 1`] = `

  1 | import assert from 'node:assert';
  2 | assert.deepEqual(/a/, /a/);

`;

exports[`no-identical-assertion-arguments > invalid(27): import assert from 'node:assert';\nassert.deepEqual(/a/, /a/); 2`] = `

Message:
  1 | import assert from 'node:assert';
> 2 | assert.deepEqual(/a/, /a/);
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^ Both arguments are the same, so this assertion always passes.

`;

exports[`no-identical-assertion-arguments > invalid(28): import assert from 'node:assert';\nassert.notDeepStrictEqual(/a/, /a/); 1`] = `

  1 | import assert from 'node:assert';
  2 | assert.notDeepStrictEqual(/a/, /a/);

`;

exports[`no-identical-assertion-arguments > invalid(28): import assert from 'node:assert';\nassert.notDeepStrictEqual(/a/, /a/); 2`] = `

Message:
  1 | import assert from 'node:assert';
> 2 | assert.notDeepStrictEqual(/a/, /a/);
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Both arguments are the same, so this assertion always fails.

`;

exports[`no-identical-assertion-arguments > invalid(29): import assert from 'node:assert';\nassert.notDeepEqual(/a/, /a/); 1`] = `

  1 | import assert from 'node:assert';
  2 | assert.notDeepEqual(/a/, /a/);

`;

exports[`no-identical-assertion-arguments > invalid(29): import assert from 'node:assert';\nassert.notDeepEqual(/a/, /a/); 2`] = `

Message:
  1 | import assert from 'node:assert';
> 2 | assert.notDeepEqual(/a/, /a/);
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Both arguments are the same, so this assertion always fails.

`;

exports[`no-identical-assertion-arguments > invalid(3): import assert from 'node:assert';\nlet a, other;\nassert.strictEqual(a.b, a.b); 1`] = `

  1 | import assert from 'node:assert';
  2 | let a, other;
  3 | assert.strictEqual(a.b, a.b);

`;

exports[`no-identical-assertion-arguments > invalid(3): import assert from 'node:assert';\nlet a, other;\nassert.strictEqual(a.b, a.b); 2`] = `

Message:
  1 | import assert from 'node:assert';
  2 | let a, other;
> 3 | assert.strictEqual(a.b, a.b);
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Both arguments are the same, so this assertion always passes.

`;

exports[`no-identical-assertion-arguments > invalid(30): import assert from 'node:assert';\nconst x = [1];\nassert.partialDeepStrictEqual(x, x); 1`] = `

  1 | import assert from 'node:assert';
  2 | const x = [1];
  3 | assert.partialDeepStrictEqual(x, x);

`;

exports[`no-identical-assertion-arguments > invalid(30): import assert from 'node:assert';\nconst x = [1];\nassert.partialDeepStrictEqual(x, x); 2`] = `

Message:
  1 | import assert from 'node:assert';
  2 | const x = [1];
> 3 | assert.partialDeepStrictEqual(x, x);
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Both arguments are the same, so this assertion always passes.

`;

exports[`no-identical-assertion-arguments > invalid(31): // The partial deep method compares structure too, so two RegExp literals are the same value to it\nimport assert from 'node:assert';\nassert.partialDeepStrictEqual(/x/, /x/); 1`] = `

  1 | // The partial deep method compares structure too, so two RegExp literals are the same value to it
  2 | import assert from 'node:assert';
  3 | assert.partialDeepStrictEqual(/x/, /x/);

`;

exports[`no-identical-assertion-arguments > invalid(31): // The partial deep method compares structure too, so two RegExp literals are the same value to it\nimport assert from 'node:assert';\nassert.partialDeepStrictEqual(/x/, /x/); 2`] = `

Message:
  1 | // The partial deep method compares structure too, so two RegExp literals are the same value to it
  2 | import assert from 'node:assert';
> 3 | assert.partialDeepStrictEqual(/x/, /x/);
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Both arguments are the same, so this assertion always passes.

`;

exports[`no-identical-assertion-arguments > invalid(4): import test from 'node:test';\ntest('x', ({assert}) => { assert.strictEqual(a, a); }); 1`] = `

  1 | import test from 'node:test';
  2 | test('x', ({assert}) => { assert.strictEqual(a, a); });

`;

exports[`no-identical-assertion-arguments > invalid(4): import test from 'node:test';\ntest('x', ({assert}) => { assert.strictEqual(a, a); }); 2`] = `

Message:
  1 | import test from 'node:test';
> 2 | test('x', ({assert}) => { assert.strictEqual(a, a); });
    |                           ^^^^^^^^^^^^^^^^^^^^^^^^ Both arguments are the same, so this assertion always passes.

`;

exports[`no-identical-assertion-arguments > invalid(5): import test from 'node:test';\ntest('x', ({assert: {notStrictEqual}}) => { notStrictEqual(a, a); }); 1`] = `

  1 | import test from 'node:test';
  2 | test('x', ({assert: {notStrictEqual}}) => { notStrictEqual(a, a); });

`;

exports[`no-identical-assertion-arguments > invalid(5): import test from 'node:test';\ntest('x', ({assert: {notStrictEqual}}) => { notStrictEqual(a, a); }); 2`] = `

Message:
  1 | import test from 'node:test';
> 2 | test('x', ({assert: {notStrictEqual}}) => { notStrictEqual(a, a); });
    |                                             ^^^^^^^^^^^^^^^^^^^^ Both arguments are the same, so this assertion always fails.

`;

exports[`no-identical-assertion-arguments > invalid(6): import assert from 'node:assert';\nconst counter = {value: 1};\nassert.strictEqual(counter.value, counter.value); 1`] = `

  1 | import assert from 'node:assert';
  2 | const counter = {value: 1};
  3 | assert.strictEqual(counter.value, counter.value);

`;

exports[`no-identical-assertion-arguments > invalid(6): import assert from 'node:assert';\nconst counter = {value: 1};\nassert.strictEqual(counter.value, counter.value); 2`] = `

Message:
  1 | import assert from 'node:assert';
  2 | const counter = {value: 1};
> 3 | assert.strictEqual(counter.value, counter.value);
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Both arguments are the same, so this assertion always passes.

`;

exports[`no-identical-assertion-arguments > invalid(7): import assert from 'node:assert';\nconst counter = {set value(v) {}};\nassert.strictEqual(counter.value, counter.value); 1`] = `

  1 | import assert from 'node:assert';
  2 | const counter = {set value(v) {}};
  3 | assert.strictEqual(counter.value, counter.value);

`;

exports[`no-identical-assertion-arguments > invalid(7): import assert from 'node:assert';\nconst counter = {set value(v) {}};\nassert.strictEqual(counter.value, counter.value); 2`] = `

Message:
  1 | import assert from 'node:assert';
  2 | const counter = {set value(v) {}};
> 3 | assert.strictEqual(counter.value, counter.value);
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Both arguments are the same, so this assertion always passes.

`;

exports[`no-identical-assertion-arguments > invalid(8): import assert from 'node:assert';\nassert.strictEqual(x, x); 1`] = `

  1 | import assert from 'node:assert';
  2 | assert.strictEqual(x, x);

`;

exports[`no-identical-assertion-arguments > invalid(8): import assert from 'node:assert';\nassert.strictEqual(x, x); 2`] = `

Message:
  1 | import assert from 'node:assert';
> 2 | assert.strictEqual(x, x);
    | ^^^^^^^^^^^^^^^^^^^^^^^^ Both arguments are the same, so this assertion always passes.

`;

exports[`no-identical-assertion-arguments > invalid(9): import assert from 'node:assert';\nassert.equal(x, x); 1`] = `

  1 | import assert from 'node:assert';
  2 | assert.equal(x, x);

`;

exports[`no-identical-assertion-arguments > invalid(9): import assert from 'node:assert';\nassert.equal(x, x); 2`] = `

Message:
  1 | import assert from 'node:assert';
> 2 | assert.equal(x, x);
    | ^^^^^^^^^^^^^^^^^^ Both arguments are the same, so this assertion always passes.

`;
